refactor: 代码审查修复、元模型重构、LazyValue 系统及 Repository 重命名 (#18)
* fix: 修复代码审查中的 P0/P1 问题

- 修复 LiteralNode.or() 错误使用 Operator.AND 的 bug
- 修复 BooleanRef 泛型参数应为 U 而非 T
- 修复 notContainsIfNotNull 空字符串判断逻辑
- 修复 notContainsIfNotEmpty 错误调用 notLikeIfNotNull
- 引入 MethodValueMap 替代 Map<Method,Object>，封装懒加载逻辑
- AFTER 事件监听器异常隔离，避免副作用互相影响
- AbstractRepository 查询方法添加 @Transactional(readOnly=true)
- NextEntityAutoConfiguration 添加 SqlDialect 类型校验
- idPath/idExtractor 添加 volatile 保证多线程可见性

* refactor: 重命名 AttributeLoader→LazyValue, MethodValueMap→LazyValueMap

使命名更准确反映延迟加载值的职责，同时将 NullableConcurrentMap
的 wrap/unwrap 方法可见性提升为 protected 以支持子类访问。

* refactor: 将 LazyValue 从接口重构为线程安全的 final class

- LazyValue 采用 double-checked locking + volatile 实现懒加载
- 添加防重入检测防止死锁
- LazyValueMap 从 compute() 改为 get()，语义更准确
- LazyValueConstructor 提取 findByForeignKey 方法，消除内部类

* refactor: LazyValueMap 改用组合模式并移除 spring 模块双重事务包装

- LazyValueMap: 从继承 NullableConcurrentMap 改为组合 ConcurrentHashMap，
  仅暴露 get/put/containsKey 必要接口，target 类型改为 Map<Method, Object>
- EntityFactoryBuilder: 移除 wrapWithTransaction 调用及方法，
  因 AbstractRepository 已通过 @Transactional 注解管理事务

* refactor: 清理无意义的测试代码

删除 21 个无实际测试价值的测试文件和约 18 个测试方法：

- 删除 meta/ 下 11 个全注释的测试文件
- 删除 expression/ 下 8 个只测 getter/instanceOf 的测试文件
- 删除 ChineseConsoleOutputTest（验证常量包含自身子串）
- 删除 JsonSerializablePredicateValueTest（空测试类）
- 删除 EntityQueryTest 中 4 个无断言方法
- 删除 GenericApiTest 中 8 个重复/无断言方法
- 删除 AbstractRepositoryIdMethodsTest 中 4 个无意义方法
- 删除 SqlLoggerTest 的 DebugMethods 嵌套类
- 精简 TypeCastUtilTest 和 SizeableTest
- 重命名 GenericApiTest.te() → testFetchManyToOneAssociations()
- 迁移 mapper 到 UserInterface.MAPPER

* refactor: 优化 LazyValueMap 命名，Wrapper→Resolvable, NullWrapper→NullValue, target→values

- sealed interface Wrapper 重命名为 Resolvable，表达"可解析"语义，避免与 Java 装箱混淆
- NullWrapper 重命名为 NullValue，与 LazyValue 命名对称
- target 字段重命名为 values，更准确描述方法值映射
- 修复异常消息中遗留的旧名 LazyConstant→LazyValue

* test: 补充 reflect/converter/interceptor/meta 模块单元测试

新增 8 个测试文件、216 个测试用例，覆盖以下类：
- reflect